# ProjNovaDawn

./: .justfile  Cargo.toml
Gate/: Cargo.toml
Gate/src/: debugger.rs  instruction_registry.rs  lib.rs  main.rs  main_cli.rs  parser.rs  registry.rs
Logs/Debug/json/: Gate.json  Gate_gui.json
Tablet/: Cargo.toml
Tablet/src/: instruction_registry.rs  lib.rs  operand_resolver.rs  parser.rs  scroll_form.rs  tokenizer.rs
Tablet/tests/: instruction_registry_test.rs  parser_test.rs  tokenizer_test.rs
Watchtower/: Cargo.toml
Watchtower/Logs/Debug/json/: omnishell_gui.json
Watchtower/src/: lib.rs
docs/: File Extensions.md  Instruction Set Phase 1.md  SYS-INDEX-000.md  System-Cog-Names.md
docs/Dev_Logs/: dev_log_1_initial_setup.md  dev_log_2_terminal_online.md  dev_log_3_debugger_built.md  dev_log_4_debugger_online.md  dev_log_5_tablet_inscriptions_initialized.md  dev_log_6_the_priest_of_the_scroll.md  dev_log_7_the_bearer_of_meaning.md
docs/Test_Logs/: test_log_1_tablet_cogs_set_1.md
terminal/: Cargo.toml
terminal (Gate)/: Cargo.toml
terminal (Gate)/Logs/Debug/json/: Gate.json  Gate_gui.json
terminal (Gate)/src/: debugger.rs  main.rs  main_cli.rs  registry.rs
terminal/Logs/Debug/json/: omnishell.json
terminal/src/: debugger.rs  main.rs  main_cli.rs  registry.rs
tests/: instruction_registry_test.rs  parser_test.rs  tokenizer_test.rs
