[package]
name = "gate"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
eframe = "0.31.1"
egui = "0.31.1"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
watchtower = { path = "../Watchtower" }

[features]
default = []
debug_mode = []


[lib]
path = "src/lib.rs"

[[bin]]
name = "Gate_cli"
path = "src/main_cli.rs"

[[bin]]
name = "Gate_gui"
path = "src/main.rs"
