[package]
name = "tablet"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gate = { path = "../Gate" }
watchtower = { path = "../Watchtower" }
rand = "0.9.1"

[features]
default = []
debug_mode = []

[lib]
path = "src/lib.rs"
