[package]
name = "omnishell"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
eframe = "0.31.1"
egui = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "omnishell_cli"
path = "src/main_cli.rs"

[[bin]]
name = "omnishell_gui"
path = "src/main.rs"
